--- a/contact/templates/contact/index.html
+++ b/contact/templates/contact/index.html
@@ -1,1 +1,47 @@
-{% extends 'global/base.html' %}
+{% extends "global/base.html" %}
+{% block content %}
+    <div class="responsive-table">
+        <table class="contacts-table">
+            <caption class="table-caption">
+                    <h1>Contatos</h1>
+            </caption>
+            <thead>
+                <tr class="table-row table-row-header" >
+                    <th class="table-header">id</th>
+                    <th class="table-header" >Nome</th>
+                    <th class="table-header">Sobrenome</th>
+                    <th class="table-header">Telefone</th>
+                    <th class="table-header">Email</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for contact in contacts %}
+                    <tr  class="table-row">
+                        <td class="table-cel">
+                            <a class="table-link" href="">
+                                {{ contact.id }}
+                            </a>
+                        </td>
+                        <td class="table-cel" >
+                                {{ contact.first_name }}
+                        </td>
+                        <td class="table-cel"> 
+                                {{ contact.last_name }} 
+                        </td>
+                        <td class="table-cel"> 
+                                {{ contact.phone }}  
+                        </td>
+                        <td class="table-cel"> 
+                                {{ contact.email }} 
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+
+    </div>
+{% endblock content %}
+
+
+
+
