--- a/contact/templates/contact/index.html
+++ b/contact/templates/contact/index.html
@@ -1,5 +1,6 @@
 {% extends "global/base.html" %}
 {% block content %}
+{% if contacts %}
     <div class="responsive-table">
         <table class="contacts-table">
             <caption class="table-caption">
@@ -40,6 +41,9 @@
         </table>
 
     </div>
+    {% else %}
+        <h1 class="single-contact-name" >Nenhum contato cadastrado</h1>
+    {% endif %}
 {% endblock content %}
 
 
