--- a/contact/templates/contact/index.html
+++ b/contact/templates/contact/index.html
@@ -6,6 +6,7 @@
             <caption class="table-caption">
                     <h1>Contatos</h1>
             </caption>
+            {% include 'global/partials/page.html' %}
             <thead>
                 <tr class="table-row table-row-header" >
                     <th class="table-header">id</th>
@@ -39,7 +40,7 @@
                 {% endfor %}
             </tbody>
         </table>
-
+        
     </div>
     {% else %}
         <h1 class="single-contact-name" >Nenhum contato cadastrado</h1>
